[metadata]
name = crypto-accountant
version = 0.0.1
author = Riley Stephens
author_email = rileystephens28@gmail.com
description = Generate equity curves, P/L reports, income statements, tax reports and more
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rileystephens28/crypto_accountant
project_urls =
    Bug Tracker = https://github.com/rileystephens28/crypto_accountant/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src